--- a/package.json
+++ b/package.json
@@ -21,7 +21,16 @@
     "eslint": "^8.7.0",
     "jest": "^27.4.7",
     "metro-react-native-babel-preset": "^0.67.0",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "@types/hoist-non-react-statics": "^3.3.1",
+    "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.178",
+    "@types/node": "^12.0.2",
+    "@types/react-native": "^0.66.4",
+    "@types/react-test-renderer": "^17.0.1",
+    "@types/xdate": "^0.8.32",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@welldone-software/why-did-you-render": "^6.2.3"
   },
   "jest": {
     "preset": "react-native"
